# openg2p-fastapi-common

./: .copier-answers.yml  .flake8  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md  tox.ini
.github/workflows/: publish.yml  test.yml
openg2p-common-g2pconnect-id-mapper/: README.md  pyproject.toml
openg2p-common-g2pconnect-id-mapper/src/openg2p_common_g2pconnect_id_mapper/: app.py  config.py  context.py
openg2p-common-g2pconnect-id-mapper/src/openg2p_common_g2pconnect_id_mapper/controllers/: link_callback.py  resolve_callback.py  update_callback.py
openg2p-common-g2pconnect-id-mapper/src/openg2p_common_g2pconnect_id_mapper/models/: common.py  link.py  message.py  resolve.py  update.py
openg2p-common-g2pconnect-id-mapper/src/openg2p_common_g2pconnect_id_mapper/service/: link.py  resolve.py  update.py  update_link.py
openg2p-fastapi-auth/: README.md  pyproject.toml
openg2p-fastapi-auth/src/openg2p_fastapi_auth/: app.py  auth_middleware.py  config.py  context.py  dependencies.py
openg2p-fastapi-auth/src/openg2p_fastapi_auth/controllers/: auth_controller.py  oauth_controller.py
openg2p-fastapi-auth/src/openg2p_fastapi_auth/models/: credentials.py  profile.py  provider_auth_parameters.py
openg2p-fastapi-auth/src/openg2p_fastapi_auth/models/orm/: login_provider.py
openg2p-fastapi-auth/tests/: test_auth.py
openg2p-fastapi-common/: README.md  pyproject.toml
openg2p-fastapi-common/src/openg2p_fastapi_common/: __init__.py  __main__.py  app.py  component.py  config.py  context.py  controller.py  exception.py  logging.py  models.py  ping.py
openg2p-fastapi-common/src/openg2p_fastapi_common/errors/: __init__.py  base_error.py  base_exception.py  http_exceptions.py
openg2p-fastapi-common/tests/: test_comon.py
openg2p_fastapi_common/: README.md  pyproject.toml
openg2p_fastapi_common/src/openg2p_fastapi_common/: __init__.py  app.py  config.py  logging.py
