[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openg2p_fastapi_common"
version = "0.1.0"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "OpenG2P Library for initializing common API Backend components"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies=[
  "fastapi ~=0.103.1",
  "uvicorn[standard] >=0.12.0",
  "asyncio ~=3.4.3",
  "jinja2 >=2.11.2",
  "pydantic-settings ~=2.0.0",
  "pydantic-extra-types ~=2.0.0",
  "python-multipart >=0.0.5",
  "python-dotenv ~=1.0.0",
  "httpx >=0.23.0",
  "sqlalchemy ~=2.0.20",
  "asyncpg ~=0.28.0",
  "json-logging ~=1.3.0",
  "orjson ~=3.9.7",
  "cryptography ~=41.0.4",
  "python-jose ~=3.3.0",
  "parse ~= 1.20.0",
  "redis ~= 5.0.1",
  "hiredis ~= 2.2.3",
]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/openg2p/openg2p-fastapi-common"
Source = "https://github.com/openg2p/openg2p-fastapi-common"
