[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openg2p_fastapi_common"
version = "0.1.0"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "OpenG2P Library for initializing common API Backend components"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/openg2p/openg2p-fastapi-common"
